Change RepeatUnrollStrategy from using 'invalidating' collection of steps to 'allowed' steps only.